# pitchtomidi

./: .gitignore  CMakeLists.txt  README.md  plan.md  prd.md
.github/workflows/: ci.yml
cmake/: Dependencies.cmake  FindPortAudio.cmake  FindRtMidi.cmake
include/audio/: AudioCapture.hpp  AudioInput.hpp  RingBuffer.hpp
include/utils/: Logger.hpp
src/: CMakeLists.txt  main.cpp
src/audio/: AudioCapture.cpp  AudioInput.cpp
src/gui/: MainComponent.cpp  MainComponent.h  MainWindow.h  PitchToMidiApplication.cpp  PitchToMidiApplication.h
tests/: CMakeLists.txt  main_test.cpp  test_audio_input.cpp  test_audio_midi.cpp  test_capture_audio.cpp
